[package]
name = "atomic_mpmc"
version = "0.2.0"
edition = "2021"
authors = [ "dexterfoxy" ]
description = "Atomic Multi-Producer Multi-Consumer Queue"
documentation = "https://docs.rs/atomic_mpmc"
readme = "README.md"
repository = "https://github.com/dexterfoxy/atomic_mpmc"
homepage = "https://github.com/dexterfoxy/atomic_mpmc"
license = "MIT OR Apache-2.0"
keywords = [ "atomic", "mpmc", "queue", "concurrency", "thread" ]
categories = [ "data-structures", "concurrency", "asynchronous" ]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.0"
sealed = "0.4.0"
